# api/resource/SkaCRUD_db/Artist.php
@@ -1,0 +1,152 @@
+<?php /** 
+* Generated by
+* 
+*      _____ _          __  __      _     _
+*     / ____| |        / _|/ _|    | |   | |
+*    | (___ | | ____ _| |_| |_ ___ | | __| | ___ _ __
+*     \___ \| |/ / _` |  _|  _/ _ \| |/ _` |/ _ \ '__|
+*     ____) |   < (_| | | | || (_) | | (_| |  __/ |
+*    |_____/|_|\_\__,_|_| |_| \___/|_|\__,_|\___|_|
+*
+* The code generator that works in many programming languages
+*
+*			https://www.skaffolder.com
+*
+*
+* You can generate the code from the command-line
+*       https://npmjs.com/package/skaffolder-cli
+*
+*       npm install -g skaffodler-cli
+*
+*   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+*
+* To remove this comment please upgrade your plan here: 
+*      https://app.skaffolder.com/#!/upgrade
+*
+* Or get up to 70% discount sharing your unique link:
+*       https://app.skaffolder.com/#!/register?friend=5db9a4ffbf13b4151b34545b
+*
+* You will get 10% discount for each one of your friends
+* 
+*/
+?>
+<?php
+	require_once './db/dbSkaCRUD_dbManager.php';
+	
+/*
+ * SCHEMA DB Artist
+ * 
+	{
+		artist: {
+			type: 'String', 
+			required : true
+		},
+		is_active: {
+			type: 'Boolean'
+		},
+		is_band: {
+			type: 'Boolean'
+		},
+		//RELAZIONI
+		
+		
+		//RELAZIONI ESTERNE
+		
+		artist: {
+			type: Schema.ObjectId,
+			ref : "Record"
+		},
+		
+	}
+ * 
+ */
+
+
+//CRUD METHODS
+
+
+//CRUD - CREATE
+
+
+$app->post('/artist',	function () use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'artist'	=> $body->artist,
+		'is_active'	=> isset($body->is_active)?$body->is_active:'',
+		'is_band'	=> isset($body->is_band)?$body->is_band:'',
+		
+	);
+
+	$obj = makeQuery("INSERT INTO artist (_id, artist, is_active, is_band )  VALUES ( null, :artist, :is_active, :is_band   )", $params, false);
+    
+	
+	echo json_encode($body);
+	
+});
+	
+//CRUD - REMOVE
+
+$app->delete('/artist/:id',	function ($id) use ($app){
+	
+	$params = array (
+		'id'	=> $id,
+	);
+
+	makeQuery("DELETE FROM artist WHERE _id = :id LIMIT 1", $params);
+
+});
+	
+//CRUD - GET ONE
+	
+$app->get('/artist/:id',	function ($id) use ($app){
+	$params = array (
+		'id'	=> $id,
+	);
+	
+	$obj = makeQuery("SELECT * FROM artist WHERE _id = :id LIMIT 1", $params, false);
+	
+	
+	
+	echo json_encode($obj);
+	
+});
+	
+	
+//CRUD - GET LIST
+
+$app->get('/artist',	function () use ($app){
+	makeQuery("SELECT * FROM artist");
+});
+
+
+//CRUD - EDIT
+
+$app->post('/artist/:id',	function ($id) use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'id'	=> $id,
+		'artist'	    => $body->artist,
+		'is_active'	    => isset($body->is_active)?$body->is_active:'',
+		'is_band'	    => isset($body->is_band)?$body->is_band:''
+	);
+
+	$obj = makeQuery("UPDATE artist SET  artist = :artist,  is_active = :is_active,  is_band = :is_band   WHERE _id = :id LIMIT 1", $params, false);
+    
+	
+	echo json_encode($body);
+    	
+});
+
+
+/*
+ * CUSTOM SERVICES
+ *
+ *	These services will be overwritten and implemented in  Custom.js
+ */
+
+			
+?>
