# api/resource/SkaCRUD_db/Record.php
@@ -1,0 +1,155 @@
+<?php /** 
+* Generated by
+* 
+*      _____ _          __  __      _     _
+*     / ____| |        / _|/ _|    | |   | |
+*    | (___ | | ____ _| |_| |_ ___ | | __| | ___ _ __
+*     \___ \| |/ / _` |  _|  _/ _ \| |/ _` |/ _ \ '__|
+*     ____) |   < (_| | | | || (_) | | (_| |  __/ |
+*    |_____/|_|\_\__,_|_| |_| \___/|_|\__,_|\___|_|
+*
+* The code generator that works in many programming languages
+*
+*			https://www.skaffolder.com
+*
+*
+* You can generate the code from the command-line
+*       https://npmjs.com/package/skaffolder-cli
+*
+*       npm install -g skaffodler-cli
+*
+*   *   *   *   *   *   *   *   *   *   *   *   *   *   *   *
+*
+* To remove this comment please upgrade your plan here: 
+*      https://app.skaffolder.com/#!/upgrade
+*
+* Or get up to 70% discount sharing your unique link:
+*       https://app.skaffolder.com/#!/register?friend=5db9a4ffbf13b4151b34545b
+*
+* You will get 10% discount for each one of your friends
+* 
+*/
+?>
+<?php
+	require_once './db/dbSkaCRUD_dbManager.php';
+	
+/*
+ * SCHEMA DB Record
+ * 
+	{
+		record: {
+			type: 'String', 
+			required : true
+		},
+		//RELAZIONI
+		
+		
+		//RELAZIONI ESTERNE
+		
+		artist: {
+			type: Schema.ObjectId,
+			ref : "Record"
+		},
+		
+	}
+ * 
+ */
+
+
+//CRUD METHODS
+
+
+//CRUD - CREATE
+
+
+$app->post('/record',	function () use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'record'	=> $body->record,
+		
+		'artist' => isset($body->artist)?$body->artist:'',
+	);
+
+	$obj = makeQuery("INSERT INTO record (_id, record , artist )  VALUES ( null, :record , :artist   )", $params, false);
+    
+	
+	echo json_encode($body);
+	
+});
+	
+//CRUD - REMOVE
+
+$app->delete('/record/:id',	function ($id) use ($app){
+	
+	$params = array (
+		'id'	=> $id,
+	);
+
+	makeQuery("DELETE FROM record WHERE _id = :id LIMIT 1", $params);
+
+});
+
+//CRUD - FIND BY artist
+
+$app->get('/record/findByartist/:key',	function ($key) use ($app){	
+
+	$params = array (
+		'key'	=> $key,
+	);
+	makeQuery("SELECT * FROM record WHERE artist = :key", $params);
+	
+});
+	
+//CRUD - GET ONE
+	
+$app->get('/record/:id',	function ($id) use ($app){
+	$params = array (
+		'id'	=> $id,
+	);
+	
+	$obj = makeQuery("SELECT * FROM record WHERE _id = :id LIMIT 1", $params, false);
+	
+	
+	
+	echo json_encode($obj);
+	
+});
+	
+	
+//CRUD - GET LIST
+
+$app->get('/record',	function () use ($app){
+	makeQuery("SELECT * FROM record");
+});
+
+
+//CRUD - EDIT
+
+$app->post('/record/:id',	function ($id) use ($app){
+
+	$body = json_decode($app->request()->getBody());
+	
+	$params = array (
+		'id'	=> $id,
+		'record'	    => $body->record,
+		'artist'      => isset($body->artist)?$body->artist:'' 
+	);
+
+	$obj = makeQuery("UPDATE record SET  record = :record  , artist=:artist  WHERE _id = :id LIMIT 1", $params, false);
+    
+	
+	echo json_encode($body);
+    	
+});
+
+
+/*
+ * CUSTOM SERVICES
+ *
+ *	These services will be overwritten and implemented in  Custom.js
+ */
+
+			
+?>
